# chesscom-rs

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  chess-openapi-spec.yaml  config.yaml  openapi-fetch-template.sh  openapi-gen.sh
examples/: player-dump.rs
src/: client.rs  error.rs  lib.rs
src/api/: player.rs
templates/: Cargo.mustache  lib.mustache  model.mustache  util.rs
templates/reqwest/: api.mustache  configuration.mustache
