[package]
name = "chesscom"
version = "0.1.0"
authors = ["Anthony Nowell <anowell@gmail.com>"]
edition = "2018"

[dependencies]
chesscom-openapi = { path = "openapi" }
reqwest = { version = "0.11.0", features = ["json", "gzip"] }
serde_json = "1.0.61"
url = { version = "2.2.0", features = ["serde"] }
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }


