[package]
name = "chesscom"
version = "0.1.2"
authors = ["Anthony Nowell <anowell@gmail.com>"]
edition = "2018"
description = "Chess.com API client"
repository = "https://github.com/anowell/chesscom-rs"
license = "MIT"

[dependencies]
chesscom-openapi = { version = "0.1.0", path = "openapi" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }


